--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "cst-component-library",
+  "name": "component-library",
   "version": "0.7.0",
-  "main": "dist/index.js",
+  "main": "components/index.tsx",
   "types": "./dist/index.d.ts",
+  "homepage": "https://github.com/agoodbook/component-library",
   "private": false,
   "dependencies": {
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +24,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc && rollup -c"
+    "build": "react-scripts build",
+    "build:components": "rollup -c",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,7 +47,10 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "rollup": "^2.79.1",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0"
   }
 }
