添加组件文档

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "declarationDir": "./dist/types",
     "noEmit": true,
     "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@src/*": ["src/*"],
+      "@components/*": ["components/*"]
+    }
   },
   "include": ["components"]
 }
