--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.13.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -34,6 +38,19 @@
       "react-app/jest"
     ]
   },
+  "babel": {
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "alias": {
+            "@src": "./src",
+            "@components": "./components"
+          }
+        }
+      ]
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.0",
     "gh-pages": "^6.1.1",
     "rollup": "^2.79.1",
     "rollup-plugin-delete": "^2.0.0",
