--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,13 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"],
-      "@components/*": ["components/*"]
+      "@components/*": ["src/components/*"]
     }
   },
-  "include": ["components"]
+  "include": [
+    "src/components",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts"
+  ]
 }
