--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "component-library",
-  "version": "0.7.0",
-  "main": "components/index.tsx",
-  "types": "./dist/index.d.ts",
-  "homepage": "https://agoodbook.github.io/component-library",
+  "name": "agoodbook-ui",
+  "version": "0.1.2",
+  "main": "./src/components/index.tsx",
+  "types": "./src/index.d.ts",
+  "homepage": "https://agoodbook.github.io/agoodbook-ui",
   "private": false,
   "dependencies": {
     "@rollup/plugin-babel": "^6.0.4",
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:components": "rollup -c",
+    "build:components": "tsc && rollup -c",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
